# QuickList-Client

./: .gitignore  CMakeLists.txt  QuickList-Client.kdev4  README.md  log.cpp  log.h  main.cpp  namespace.cpp  namespace.h  quicklist.pid  quicklistclient.cpp  quicklistclient.h  uds_client.py  unixdomainserver.cpp  unixdomainserver.h  unixdomainsession.cpp  unixdomainsession.h  websocketsession.cpp  websocketsession.h
.kdev4/: QuickList-Client.kdev4
conf/: client.js
tls/: clientB.cert.pem  clientB.key.pem
